# vault

./: Cargo.toml  Dockerfile  README.md
migrations/: 20250928221114_initial_setup.sql
src/: config.rs  crypto.rs  errors.rs  handlers.rs  main.rs  middleware.rs  models.rs  regex.rs  repositories.rs  routes.rs  state.rs  validators.rs
src/handlers/: connections.rs  secrets.rs
src/middleware/: auth.rs  healthcheck.rs  logging.rs
src/repositories/: connections.rs  dek.rs  kek.rs  secrets.rs
src/services/: connections.rs  secrets.rs
