[package]
name = "vault"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.1.7"
aws-sdk-kms = "1.16.0"
axum = { version = "0.8.6", features = ["json", "macros"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "2.0.16"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
chrono = { version = "0.4.31", features = ["serde"] }
aes-gcm = "0.10.3"
hex = "0.4.3"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
p256 = { version = "0.13.2", features = ["ecdsa"] }
ecdsa = "0.16.9"
sha2 = "0.10.9"
bytes = "1.10.1"
